# migadu-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
migadu_mcp/: __init__.py  config.py  main.py
migadu_mcp/client/: migadu_client.py
migadu_mcp/services/: __init__.py  alias_service.py  domain_service.py  forwarding_service.py  identity_service.py  mailbox_service.py  rewrite_service.py  service_factory.py
migadu_mcp/tools/: __init__.py  alias_tools.py  domain_tools.py  forwarding_tools.py  identity_tools.py  mailbox_tools.py  resource_tools.py  rewrite_tools.py
migadu_mcp/utils/: bulk_processing.py  context_protection.py  decorators.py  email_parsing.py  schemas.py  specs.py  summarize.py  tool_helpers.py
scripts/: release.sh
tests/: conftest.py  test_decorators.py  test_http_client.py  test_migadu_mcp.py  test_schemas.py  test_summarize.py
tests/services/: test_alias_service.py  test_domain_service.py  test_forwarding_service.py  test_identity_service.py  test_mailbox_service.py  test_rewrite_service.py
